changed the dependencies and add the fixture test into another phpunit xml

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,15 +1,10 @@
 <phpunit>
-    <php>
-        <ini name="error_reporting" value="-1" />
-        <server name="KERNEL_DIR" value="app/" />
-    </php>
     <logging>
         <log type="coverage-text" target="coverage.txt" showUncoveredFiles="false"/>
     </logging>
     <testsuites>
         <testsuite name="WebComposerSynchronizationBundle unit tests">
             <directory>Tests/Service/</directory>
-            <directory>Tests/DataFixtures/ORM/</directory>
             <directory>Tests/Repository/</directory>
             <directory>Tests/Controller/</directory>
             <directory>Tests/Command/</directory>
@@ -20,6 +15,7 @@
         <whitelist>
             <directory>*</directory>
             <exclude>
+                <directory>DataFixtures</directory>
                 <directory>Tests</directory>
                 <directory>DependencyInjection</directory>
                 <directory>Entity</directory>
