--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,9 @@
   ],
   "require": {
     "php": ">=5.5.9|7.0.*",
-    "symfony/symfony":"3.1.*",
-    "doctrine/doctrine-bundle": "1.6.*",
-    "jms/composer-deps-analyzer": "^1.0"
+    "symfony/symfony": "3.1.*",
+    "doctrine/orm": "2.5.*",
+    "jms/composer-deps-analyzer": "1.0.*"
   },
   "require-dev": {
     "phpunit/phpunit": "5.6.*",
